# plantuml-sequence

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish-to-pypi.yaml
docs/: apidoc.md  conf.py  examples.md  index.md
plantuml_sequence/: __init__.py  diagram.py  sequence_diagram.py  utils.py
test/: test_examples.py  test_utils.py
