[tool.poetry]
name = "plantuml-sequence"
version = "0.1.0"
description = "Create plantuml sequence charts from Python"
authors = ["Jonas Ehrlich <jonas.ehrlich@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jonasehrlich/plantuml-sequence"
repository = "https://github.com/jonasehrlich/plantuml-sequence"
keywords = ["plantuml", "charts"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.256"
pre-commit = "^3.1.1"
pytest = "^7.2.2"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
