[project]
name = "plantuml-sequence"
version = "0.5.0"
description = "Create PlantUML sequence diagrams programmatically from Python"
authors = [{ name = "Jonas Ehrlich", email = "jonas.ehrlich@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = [
    "plantuml",
    "diagram",
]
dependencies = [
    "typing-extensions>=4.15.0",
]

[project.urls]
Homepage = "https://github.com/jonasehrlich/plantuml-sequence"
Repository = "https://github.com/jonasehrlich/plantuml-sequence"
Documentation = "https://plantuml-sequence.readthedocs.io"

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]
docs = [
    "furo>=2025.9.25",
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    "^\\s+\\.\\.\\.",
    # Don't complain about type check guarded imports
    "if ((ty)(ping)?.)?TYPE_CHECKING:",
]
fail_under = 95

[tool.coverage.run]
branch = true
source = ["plantuml_sequence"]

[tool.coverage.xml]
output = "coverage.xml"

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["plantuml_sequence", "test"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle error rules
    "F",   # pycodestyle warning rules
    "B",   # flake8-bugbear rules
    "S",   # flake8-bandit rules
    "PTH", # flake8-use-pathlib
    "PLC", # pylint convention rules
    "PLR", # pylint refactor rules
    "PLE", # pylint error rules
    "PLW", # pylint warning rules
    "C90", # mccabe complexity rules
]

[tool.ruff.lint.per-file-ignores]
# Disable assert-statement and magic-value-comparison rules for tests
"test_*.py" = ["S101", "PLR2004"]
# Disable unused-import rule for __init__.py files
"__init__*.py" = ["F401",]

[tool.ruff.lint.pylint]
max-args = 8
